module pattern has been added;

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <div class="result"></div>
 
     <script src="src/abstract-class.js"></script>
+    <script src="src/module-pattern.js"></script>
     <script src="src/main.js"></script>
 </body>
 </html>
