prototype pattern example has been added;

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <script src="src/abstract-class.js"></script>
     <script src="src/module-pattern.js"></script>
+    <script src="src/prototype-pattern.js"></script>
     <script src="src/main.js"></script>
 </body>
 </html>
