--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="src/abstract-class.js"></script>
     <script src="src/module-pattern.js"></script>
     <script src="src/prototype-pattern.js"></script>
+    <script src="src/singleton-pattern.js"></script>
     <script src="src/main.js"></script>
 </body>
 </html>
