observer design pattern has been added;

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="src/module-pattern.js"></script>
     <script src="src/prototype-pattern.js"></script>
     <script src="src/singleton-pattern.js"></script>
+    <script src="src/observable-pattern.js"></script>
     <script src="src/main.js"></script>
 </body>
 </html>
